# julius

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  julius.toml
src/: bot.rs  config.rs  main.rs  version.rs
src/plugins/: help.rs  mod.rs  plugin.rs
