[package]
name = "julius"
version = "0.1.0"
description = "An IRC bot"
readme = "README.md"
documentation = "https://github.com/nlamirault/julius"
repository = "https://github.com/nlamirault/julius"
licence = "Apache 2"
authors = ["Nicolas Lamirault <nicolas.lamirault@gmail.com>"]
keywords = ["irc", "bot"]

[dependencies]
# docopt = "0.6"
# rustc-serialize = "0.3"
clap = "2.6.0"
irc = "0.11.3"
log = "0.3"
env_logger = "0.3.3"

[dev-dependencies]
